Fixed tooltip overflow.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -42,3 +42,47 @@ input:focus {
   height: 0;
   background: transparent;
 }
+
+/* Arrows */
+.arrow-up {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom-width: 5px;
+  border-bottom-style: solid;
+}
+
+/* Arrows */
+.arrow-top {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom-width: 5px;
+  border-bottom-style: solid;
+}
+.arrow-left {
+  width: 0;
+  height: 0;
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+  border-right-width: 5px;
+  border-right-style: solid;
+}
+.arrow-right {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom-width: 5px;
+  border-bottom-style: solid;
+}
+.arrow-bottom {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom-width: 5px;
+  border-bottom-style: solid;
+}
